# lerners.io

./: .editorconfig  .gitignore  .prettierignore  Dockerfile  README.md  fly.toml  next.config.js  package-lock.json  package.json  remix.config.js  server.ts  tailwind.config.js  tsconfig.json
api/github/: fetch-stars.ts
app/: root.tsx  tailwind.css
app/components/: blog-directory.tsx  blog-layout-wrapper.tsx  code-wrapper.tsx  footer.tsx  layout-wrapper.tsx  lazy-image.tsx  nav-link.tsx  navbar.tsx  not-found-page.tsx  portable-text-map.tsx  post-menu.tsx  sidenote.tsx  theme-provider.tsx  themed.tsx
app/config/: redis.config.ts  sanity.server.ts  sanity.ts
app/hooks/: use-media.tsx  use-theme.tsx
app/icons/: logo.tsx
app/interfaces/: post.ts  sidenote.ts  tag.ts
app/routes/: __index.$.tsx  __index.blog.$.tsx  __index.tsx
app/services/: db.server.ts  redis.server.ts
app/styles/: font.css  main.css
app/utils/: env.server.ts  languages.ts  sanity.server.ts  session.server.ts  site-url.ts  theme.server.ts  time.ts
hooks/: use-discord-username.tsx  use-random-enum.tsx  use-random-language.tsx
pages/: _app.tsx  _document.tsx  index.tsx
prisma/: schema.prisma
sanity/: package-lock.json  package.json  resolveProductionUrl.js  sanity.json
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: bot.rs  common.rs  cors.rs  main.rs
sources/: person.cpp  person.cs  person.ex  person.go  person.java  person.py  person.rs  person.ts  projects.json  projects.toml  projects.yml
styles/: globals.css  home.module.css
(+88 files in other folders)
