[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = {version = "1.0.136", features = ["derive"]}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}

[dependencies.serenity]
default-features = false
features = [
  "builder",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
]
version = "0.10.10"
